# Email-super-67-classifier-

./: .gitignore  README.md  classifier.py  email_summarizer.py  pyproject.toml  run.sh  smart_search.py  structures.py
cli/: README.md  classifier.py  install.sh  run.sh  structures.py
cli/tests/data/: alerts.txt  format.json  hr_documents.txt  newsletters.txt  unknown.txt  urgent.txt
mailpilot/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
mailpilot/backend/: .env.example  requirements.txt
mailpilot/backend/app/: __init__.py  ai.py  classifier.py  config.py  letter.py  main.py  search.py
mailpilot/backend/tests/: test_letter.py
mailpilot/frontend/: index.html  package-lock.json  package.json  vite.config.js
mailpilot/frontend/src/: icons.jsx  util.js
mailpilot/frontend/src/components/: DetailPane.jsx  ListPane.jsx  Sidebar.jsx
mailpilot/mailpilot/: run.sh
mailpilot/mailpilot/backend/app/: main.py  store.py
mailpilot/mailpilot/backend/tests/: test_api.py  test_classifier.py  test_search.py  test_store.py
mailpilot/mailpilot/frontend/src/: App.jsx  api.js  styles.css
tests/: test_classifier.py
tests/data/: spam.txt
